--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -15,14 +15,15 @@ body {
     background-color: $blue;
     font-family: 'Roboto', sans-serif;
     color: $black;
-    font-size: 1.6rem;
+    font-size: 2rem;
 }
 
 .section {
+    box-sizing: border-box;
     width: 97%;
-    margin: 0 auto 3rem auto;
+    margin: 0 auto 4rem auto;
     background-color: $white;
-    padding: 2rem;
+    padding: 4rem 2rem;
     @extend %center-child-vertical;
     
     &__title {
@@ -35,15 +36,15 @@ body {
 }
 
 h1 {
-    font-size: 4rem;
+    font-size: 5rem;
 }
 
 h2 {
-    font-size: 3rem;
+    font-size: 4rem;
 }
 
 h3 {
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 h1, h2, h3 {
@@ -56,6 +57,12 @@ ul, li {
 }
 
 a {
+    font-size: 2rem;
     color: inherit;
     text-decoration: inherit;
+}
+
+button {
+    border: none;
+    background-color: inherit;
 }
