--- a/src/sass/base/_colors.scss
+++ b/src/sass/base/_colors.scss
@@ -3,6 +3,8 @@ $secondary: #49515a;
 $tertiary: #778492;
 
 $white:  #F5F5F5;
+$grey:  darken(#F5F5F5, 50%);
+
 $blue: #DAE3E7;
 // $black: #434343;
 $black: #25292E;
