--- a/src/sass/section/_main-header.scss
+++ b/src/sass/section/_main-header.scss
@@ -7,7 +7,13 @@
     padding: 3rem 0;
     margin-bottom: 3rem;
     background-color: $white;
-
+    
+    &--right-col
+    {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
     &__img {
         width: 150px;
         border-radius: 50%;
@@ -25,7 +31,6 @@
 
     &__title {
         margin: 0 auto;
-        font-size: 4rem;
     }
 
     &__snippet {
@@ -47,8 +52,17 @@
         display: flex;
     }
 
-    @media (min-width: 800px) {
+    @media (min-width: 800px) 
+    {
         padding: 9rem 0;
+        &__title {
+            display: flex;
+            flex-direction: row;
+
+            & > div:last-child {
+                margin-left: 1rem;
+            }
+        }
 
         &__container {
             flex-direction: row;
